새로 merge된 포스팅 추가 - Keras를 이용한 CNN Ensemble 기법 - 케라스로 설계한 GAN으로 이미지 흐림 제거 - 케라스로 이해하는 Autoencoder 등 7개

--- a/_posts/2018-10-20-tf.keras와 eager execution를 이용한 손글씨 숫자 이미지 만들기.md
+++ b/_posts/2018-10-20-tf.keras와 eager execution를 이용한 손글씨 숫자 이미지 만들기.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "DCGAN: tf.keras 와 eager execution를 이용한 손글씨 숫자 이미지 만들기"
 categories: GAN
-tags: [DCGAN, 이미지처리]
+tags: [DCGAN, 이미지처리, "eager execution"]
 comments: true
 ---
 
