Fix categories to "이미지"

--- a/_posts/2018-10-25-케라스를 이용한 다중 라벨 분류.md
+++ b/_posts/2018-10-25-케라스를 이용한 다중 라벨 분류.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "케라스를 이용한 다중 라벨 분류(Multi-label classification with Keras)"
-categories: 일반
+categories: 이미지
 tags: [Keras, CNN, Multi-label, Classification]
 comments: true
 ---
