Fix name & categories

--- a/_posts/2018-10-25-케라스를 이용한 멀티 GPU 학습하기.md
+++ b/_posts/2018-10-25-케라스를 이용한 멀티 GPU 학습하기.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title:  "케라스 LSTM 모델로 작곡하기"
-categories: 예술
+title:  "케라스를 이용한 멀티 GPU 학습(How-To: Multi-GPU training with Keras, Python, and deep learning)"
+categories: 일반
 tags: [Keras, CNN, Multi-GPU , Classification]
 comments: true
 ---
